flex/engines/graph_db/grin/include/rust/grin.rs


    #[cfg(all(feature = "grin_trait_select_neighbor_partition_for_adjacent_list", feature = "grin_with_vertex_property"))]
    #[allow(unused)]
    pub fn grin_get_adjacent_list_by_edge_type_select_partition_neighbor(
        arg1: GrinGraph,
        arg2: GrinDirection,
        arg3: GrinVertex,
        arg4: GrinEdgeType,
        arg5: GrinPartition,
    ) -> GrinAdjacentList;

    #[cfg(feature = "grin_trait_specific_vev_relation")]
    #[allow(unused)]
    pub fn grin_get_one_to_one_vev_types(arg1: GrinGraph) -> GrinVevTypeList;

    #[cfg(feature = "grin_trait_specific_vev_relation")]
    #[allow(unused)]
    pub fn grin_get_one_to_many_vev_types(arg1: GrinGraph) -> GrinVevTypeList;

    #[cfg(feature = "grin_trait_specific_vev_relation")]
    #[allow(unused)]
    pub fn grin_get_many_to_one_vev_types(arg1: GrinGraph) -> GrinVevTypeList;

    #[cfg(feature = "grin_trait_specific_vev_relation")]
    #[allow(unused)]
    pub fn grin_get_many_to_many_vev_types(arg1: GrinGraph) -> GrinVevTypeList;

    #[doc = " @brief Get the vertex types that have primary keys\n In some graph, not every vertex type has primary keys.\n @param GrinGraph The graph\n @return The vertex type list of types that have primary keys"]
    #[cfg(feature = "grin_enable_vertex_primary_keys")]
    #[allow(unused)]
    pub fn grin_get_vertex_types_with_primary_keys(arg1: GrinGraph) -> GrinVertexTypeList;

    #[doc = " @brief Get the primary keys properties of a vertex type\n The primary keys properties are the properties that can be used to identify a vertex.\n They are a subset of the properties of a vertex type.\n @param GrinGraph The graph\n @param GrinVertexType The vertex type\n @return The primary keys properties list"]
    #[cfg(feature = "grin_enable_vertex_primary_keys")]
    #[allow(unused)]
    pub fn grin_get_primary_keys_by_vertex_type(
        arg1: GrinGraph,
        arg2: GrinVertexType,
    ) -> GrinVertexPropertyList;

    #[doc = " @brief Get the primary keys values row of a vertex\n The values in the row are in the same order as the primary keys properties.\n @param GrinGraph The graph\n @param GrinVertex The vertex\n @return The primary keys values row"]
    #[cfg(feature = "grin_enable_vertex_primary_keys")]
    #[allow(unused)]
    pub fn grin_get_vertex_primary_keys_row(arg1: GrinGraph, arg2: GrinVertex) -> GrinRow;

    #[cfg(feature = "grin_enable_edge_primary_keys")]
    #[allow(unused)]
    pub fn grin_get_edge_types_with_primary_keys(arg1: GrinGraph) -> GrinEdgeTypeList;

    #[cfg(feature = "grin_enable_edge_primary_keys")]
    #[allow(unused)]
    pub fn grin_get_primary_keys_by_edge_type(
        arg1: GrinGraph,
        arg2: GrinEdgeType,
    ) -> GrinEdgePropertyList;

    #[cfg(feature = "grin_enable_edge_primary_keys")]
    #[allow(unused)]
    pub fn grin_get_edge_primary_keys_row(arg1: GrinGraph, arg2: GrinEdge) -> GrinRow;

    #[allow(unused)]
    pub fn grin_destroy_string_value(arg1: GrinGraph, arg2: *const ::std::os::raw::c_char);

    #[doc = " @brief Get the vertex property name\n @param GrinGraph The graph\n @param GrinVertexType The vertex type that the property belongs to\n @param GrinVertexProperty The vertex property\n @return The property's name as string"]
    #[cfg(feature = "grin_with_vertex_property_name")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_name(
        arg1: GrinGraph,
        arg2: GrinVertexType,
        arg3: GrinVertexProperty,
    ) -> *const ::std::os::raw::c_char;

    #[doc = " @brief Get the vertex property with a given name under a specific vertex type\n @param GrinGraph The graph\n @param GrinVertexType The specific vertex type\n @param name The name\n @return The vertex property"]
    #[cfg(feature = "grin_with_vertex_property_name")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_by_name(
        arg1: GrinGraph,
        arg2: GrinVertexType,
        name: *const ::std::os::raw::c_char,
    ) -> GrinVertexProperty;

    #[doc = " @brief Get properties under all types with a given name.\n For example, vertex type \"person\" and \"company\" both have a property\n called \"name\". When this API is called given \"name\", it will return a list\n of \"name\" properties under both types.\n @param GrinGraph The graph\n @param name The name\n @return The vertex property list of properties with the given name"]
    #[cfg(feature = "grin_with_vertex_property_name")]
    #[allow(unused)]
    pub fn grin_get_vertex_properties_by_name(
        arg1: GrinGraph,
        name: *const ::std::os::raw::c_char,
    ) -> GrinVertexPropertyList;

    #[cfg(feature = "grin_with_edge_property_name")]
    #[allow(unused)]
    pub fn grin_get_edge_property_name(
        arg1: GrinGraph,
        arg2: GrinEdgeType,
        arg3: GrinEdgeProperty,
    ) -> *const ::std::os::raw::c_char;

    #[cfg(feature = "grin_with_edge_property_name")]
    #[allow(unused)]
    pub fn grin_get_edge_property_by_name(
        arg1: GrinGraph,
        arg2: GrinEdgeType,
        name: *const ::std::os::raw::c_char,
    ) -> GrinEdgeProperty;

    #[cfg(feature = "grin_with_edge_property_name")]
    #[allow(unused)]
    pub fn grin_get_edge_properties_by_name(
        arg1: GrinGraph,
        name: *const ::std::os::raw::c_char,
    ) -> GrinEdgePropertyList;

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_equal_vertex_property(
        arg1: GrinGraph,
        arg2: GrinVertexProperty,
        arg3: GrinVertexProperty,
    ) -> bool;

    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_destroy_vertex_property(arg1: GrinGraph, arg2: GrinVertexProperty);

    #[doc = " @brief Get the datatype of the vertex property\n @param GrinGraph The graph\n @param GrinVertexProperty The vertex property\n @return The datatype of the vertex property"]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_datatype(
        arg1: GrinGraph,
        arg2: GrinVertexProperty,
    ) -> GrinDatatype;

    #[doc = " @brief Get the value of int32, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype int32.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n @param GrinGraph The graph\n @param GrinVertex The vertex\n @param GrinVertexProperty The vertex property\n @return The value of the property"]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_value_of_int32(
        arg1: GrinGraph,
        arg2: GrinVertex,
        arg3: GrinVertexProperty,
    ) -> i32;

    #[doc = " @brief Get the value of uint32, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype uint32.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n @param GrinGraph The graph\n @param GrinVertex The vertex\n @param GrinVertexProperty The vertex property\n @return The value of the property"]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_value_of_uint32(
        arg1: GrinGraph,
        arg2: GrinVertex,
        arg3: GrinVertexProperty,
    ) -> u32;

    #[doc = " @brief Get the value of int64, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype int64.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n @param GrinGraph The graph\n @param GrinVertex The vertex\n @param GrinVertexProperty The vertex property\n @return The value of the property"]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_value_of_int64(
        arg1: GrinGraph,
        arg2: GrinVertex,
        arg3: GrinVertexProperty,
    ) -> i64;

    #[doc = " @brief Get the value of uint64, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype uint64.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n @param GrinGraph The graph\n @param GrinVertex The vertex\n @param GrinVertexProperty The vertex property\n @return The value of the property"]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_value_of_uint64(
        arg1: GrinGraph,
        arg2: GrinVertex,
        arg3: GrinVertexProperty,
    ) -> u64;

    #[doc = " @brief Get the value of float, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype float.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n @param GrinGraph The graph\n @param GrinVertex The vertex\n @param GrinVertexProperty The vertex property\n @return The value of the property"]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_value_of_float(
        arg1: GrinGraph,
        arg2: GrinVertex,
        arg3: GrinVertexProperty,
    ) -> f32;

    #[doc = " @brief Get the value of double, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype double.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n @param GrinGraph The graph\n @param GrinVertex The vertex\n @param GrinVertexProperty The vertex property\n @return The value of the property"]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_value_of_double(
        arg1: GrinGraph,
        arg2: GrinVertex,
        arg3: GrinVertexProperty,
    ) -> f64;

    #[doc = " @brief Get the value of string, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype string.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n Note that the returned string should be explicitly freed by the user,\n by calling API ``grin_destroy_string_value``.\n @param GrinGraph The graph\n @param GrinVertex The vertex\n @param GrinVertexProperty The vertex property\n @return The value of the property"]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_value_of_string(
        arg1: GrinGraph,
        arg2: GrinVertex,
        arg3: GrinVertexProperty,
    ) -> *const ::std::os::raw::c_char;

    #[doc = " @brief Get the value of int32, given a vertex and a vertex property.\n The user should make sure the vertex property is of datatype date32.\n The return int has no predefined invalid value.\n User should use ``grin_get_last_error_code()`` to check if the API call\n is successful.\n @param GrinGraph The graph\n @param GrinVertex The vertex\n @param GrinVertexProperty The vertex property\n @return The value of the property"]
    #[cfg(feature = "grin_with_vertex_property")]
    #[allow(unused)]
    pub fn grin_get_vertex_property_value_of_date32(
        arg1: GrinGraph,
        arg2: GrinVertex,
        arg3: GrinVertexProperty,
    ) -> i32;
